tests/fixtures/invalid/type_errors/invalid_operation.luma
-- Invalid operation between types
let x = 5
let y = "hello"
let z = x + y
